--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello Shapes Blazor</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+This is a simple app to demonstrate:
+<ul>
+    <li>Blazor on client side.</li>
+    <li>Blazor on server side (.NET Core 3.0 - Razor Components</li>
+    <li>Using C# and OOP methods</li>
+</ul>
