--- a/Shared/NavMenu.cshtml
+++ b/Shared/NavMenu.cshtml
@@ -19,13 +19,24 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch weather data
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="/shapes1">
+            <NavLink class="nav-link" href="/shapesdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch shape data
+            </NavLink>
+        </li>        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/circleshape">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> 
-Shapes 1
+Shapes :: Circle
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/squareshape">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> 
+Shapes :: Square
             </NavLink>
         </li>
     </ul>
